[package]
name = "haby_server"
version = "0.1.0"
edition = "2021"

[dependencies]
haby_core = {path = "../haby_core"}

rocket = {version = "0.5", features = ["json"]}
rocket_cors = { version = "0.6.0", default-features = false }

sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"]}

